    user option.
  - New: key binding to a command to display Emacs executable path: <f11> ? e x.
  - New: key binding to display Emacs up-time (<f11> ? e u).
- Update: *Programming Language Support -- CC Mode Utilities*
  - Refactoring: Moved cc-mode utilities from pel_keys.el to the new pel-cc.el
    file.
  - New: *pel-cc-mode-info* can now be used from any major mode where it will
    display info about non-loaded symbols and features.
- Update: *Programming Language Support -- C*
  - New: ``<f12> <f12> d`` insert a C pre-processor #define statement.
  - New: ``<f12> <f12> i`` insert a C pre-processor #include statement for
    library files.
  - New: ``<f12> <f12> I`` insert a C pre-processor #include statement for
    local files.
- Update: *Programming Language Support -- Common Lisp*
  - New: user option *pel-clisp-hyperspec-root* to identify the location of
    the LispWorks Common Lisp HyperSpec HTML documentation.
  - New: The ``<f12> <f3>`` key sequence provides access to slime
    customization buffer.
- Update: *Text Insertion*:
  - Improved: generic file mode/header template insetion (``<f6>
    h``) and separator line insertion (``<f6> l``) now get comment style from
    user if they are not already defined.
- Update: *Navigation*:
  - New: when the new *pel-windmove-on-f1-cursor* user option is set to t, PEL
    activates several key bindings for windows management using the <f1>
    prefix followed by cursor keys sequences:
    - <f1> <cursor> : to move to pointed window.
    - <f1> <C-cursor> : to create window in pointed direction.
    - <f1> <C-S-cursor> : to close window in pointed direction.
    - <f1> <M-cursor> : to resize current window according to the cursor used.
    - <f1> <kp-5> : to balance the size of all windows in current frame.
  - New: when the new *pel-windmove-on-esc-cursor* user option is set to t, PEL
    activates several key bindings for windows management using the *Esc*
    prefix followed by cursor keys sequences: